--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id="everything">
 	<div id="web_cover">
 	<header id="d_header">
-		<h2><img src="images/camera.jpg" alt="image"> DAVE'S PIX SELL<h2>
+		<h2><img src="http://i.imgur.com/RA0x6SA.jpg" alt="image"> DAVE'S PIX SELL<h2>
 		<p1>Helping you build your dreams as a photographer</p1>
 	</header>
 
@@ -36,16 +36,16 @@
 	</aside>
 
 	<div id="imgptt">
-		<p1><img src="images/life.jpg" alt="image"> by david okeke</p1>
-		<p1><img src="images/dunk.png" alt="image"> by david okeke</p1>
-		<p1><img src="images/emenike.png" alt="image"> by david okeke</p1>
-		<p1><img src="images/grace.png" alt="image"> by david okeke</p1>
-		<p1><img src="images/selfie.png" alt="image"> by david okeke</p1>
-		<p1><img src="images/daddy_GO.jpeg" alt="image"> by david okeke</p1>
-		<p1><img src="images/cutne.png" alt="image">by david okeke</p1>
-		<p1><img src="images/true.jpg" alt="image"> by david okeke</p1>
-		<p1><img src="images/dance.gif" alt="image"> by david okeke</p1>
-		<p1><img src="images/coolshoes.jpg" alt="image"> by david okeke</p1>
+		<p1><img src="http://i.imgur.com/B2DXrSG.jpg" alt="image"> by david okeke</p1>
+		<p1><img src="http://i.imgur.com/81GCnWn.png" alt="image"> by david okeke</p1>
+		<p1><img src="http://i.imgur.com/P8rOuS4.png" alt="image"> by david okeke</p1>
+		<p1><img src="http://i.imgur.com/Tx4uW3H.png" alt="image"> by david okeke</p1>
+		<p1><img src="http://i.imgur.com/2X349uB.png" alt="image"> by david okeke</p1>
+		<p1><img src="http://i.imgur.com/SLZOy93.jpg" alt="image"> by david okeke</p1>
+		<p1><img src="http://i.imgur.com/RYU3ZEm.jpg" alt="image">by david okeke</p1>
+		<p1><img src="http://i.imgur.com/AZqer8V.jpg" alt="image"> by david okeke</p1>
+		<p1><img src="http://i.imgur.com/N1VKQnM.gif" alt="image"> by david okeke</p1>
+		<p1><img src="http://i.imgur.com/z1eS8ip.jpg" alt="image"> by david okeke</p1>
 	</div>
 	</div>
 	<footer id="d_footer">
