--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id="everything">
 	<div id="web_cover">
 	<header id="d_header">
-		<h2><img src="images/camera.jpg" alt="image"> DAVE'S PIX SELL<h2>
+		<h2><img src="http://i.imgur.com/RA0x6SA.jpg" alt="image"> DAVE'S PIX SELL<h2>
 		<p1>Helping you build your dreams as a photographer</p1>
 	</header>
 
